Bug 42748 - EDITING: Numbering in numbered list doesn't show when affected by tracked changes
Summary: EDITING: Numbering in numbered list doesn't show when affected by tracked cha...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: BSA target:6.4.0
Keywords:
: 97519 (view as bug list)
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2011-11-09 10:58 UTC by johannesdenboer
Modified: 2020-10-28 12:04 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Behavior of track changes as it is working now, It would be nice if the number also gets a strike through and the list doesn't count the deleted number. (15.88 KB, image/jpeg)
2011-11-09 10:58 UTC, johannesdenboer
Details
Screen shots: before & after fixing (47.62 KB, image/png)
2019-10-22 16:14 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description johannesdenboer 2011-11-09 10:58:14 UTC
Created attachment 53337 [details]
Behavior of track changes as it is working now, It would be nice if the number also gets a strike through and the list doesn't count the deleted number.

Problem description: Mayby it is more like a feature request than a bug report. Tracking changes delivers for deleted text an line through. But when editing a numbered list the deletion of the number cannot be tracked.

Steps to reproduce:
1. create a document with a numbered list
2. enable track changes
3. delete a rule with its number

Current behavior:
The deleted rule gets a strike through, but the number keeps normal or totally deleted without notion of its deletion

Expected behavior:
The nicest behavior would be that the number gets a strike through and the next number is the same, so that when the changes are accepted the numbering doesn't change any more

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:7.0.1) Gecko/20111002 Firefox/7.0.1 PaleMoon/7.0.1
Comment 1 sasha.libreoffice 2012-04-19 05:12:38 UTC
reproduced in 3.3.4 and 3.5.2 on Fedora 64 bit
changing version to 3.3.4 as most early reproducible

for comparison, msWord 2007 strikes out all numbers of items beginning from deleted line until end of list and places new variants of numbers to right of stricked out.
Comment 2 A (Andy) 2014-12-25 11:51:15 UTC
Reproducible with LO 4.4.0.0.beta1 (Win 8.1).

To delete the number you need to use the Backspace key to get to the previous line.
Comment 3 QA Administrators 2016-01-17 20:05:28 UTC Comment hidden (obsolete)
Comment 4 johannesdenboer 2016-01-18 17:16:30 UTC
In the current 5.0.4.2 (x64) version of Libreoffice this bug, or lack of feature, is still present. Still either the number stays in normal formatting or with an extra backspace it gets deleted completely without tracking its deletion.
Comment 5 Buovjaga 2016-02-09 12:16:14 UTC
*** Bug 97519 has been marked as a duplicate of this bug. ***
Comment 6 QA Administrators 2017-03-06 16:10:14 UTC Comment hidden (obsolete)
Comment 7 johannesdenboer 2017-03-06 18:18:45 UTC
Bug is still present in version 5.3.0.3 (X64) on windows. Behaviour is the same as the original reported behaviour. Either no line through the number of deleting the entire number.
Comment 8 Timur 2017-09-05 11:32:50 UTC
Create a list: 
    1. one
    2. two 
    3. three

Track changes delete "two", you get :
    1. one
    2. (deleted)
    3. three

With one more backspace:
    1. one
    (empty) (deleted)
    2. three

With Show/Hide Track Changes only deleted "two" is shown, without number.
I had a case where numbers are messed up, but I can't reproduce.
Comment 9 Timur 2017-09-05 11:36:58 UTC
*** Bug 93795 has been marked as a duplicate of this bug. ***
Comment 10 Aron Budea 2018-02-14 01:34:03 UTC
*** Bug 115523 has been marked as a duplicate of this bug. ***
Comment 11 Aron Budea 2018-02-14 01:43:27 UTC
Let's include the case when numbered items are added, numbering should reflect that it's due to a tracked change. The cases (deletion and addition) have to be fixed together after all.
Comment 12 Aron Budea 2018-02-14 01:44:47 UTC
*** Bug 115524 has been marked as a duplicate of this bug. ***
Comment 13 QA Administrators 2019-02-15 03:47:00 UTC Comment hidden (obsolete)
Comment 14 László Németh 2019-10-22 16:03:08 UTC
tdf#42748 show changes of list numbers and bullets

At splitting or joining list items or adding new ones, the
removed or new list number or bullet didn't show the change,
only a vertical line added to the left margin of the list
items. Moreover, deleting only the text of the list
item (keeping its number) looked like the full deletion of
the item.
Comment 15 Commit Notification 2019-10-22 16:04:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/173b7fcaae86980809889db30ddb82f8ba883103

tdf#42748 show changes of list numbers and bullets

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 László Németh 2019-10-22 16:14:57 UTC
Created attachment 155239 [details]
Screen shots: before & after fixing
Comment 17 Ellis Farmer 2019-10-22 16:42:15 UTC
From the screenshot, this only partially fixed (I'm not sure how to mark it in this tracker).

 - The "3" in the 4th part of the screenshots be a "2".
 - The color of the line through the deleted 2 should indicate that it was deleted and thus should match the deleted color line.

Also, what happens to numbers after #3, the "Deleted this..." line?  Do they get renumbered appropriately?
Comment 18 László Németh 2019-10-24 07:04:55 UTC
(In reply to Ellis Farmer from comment #17)
> From the screenshot, this only partially fixed (I'm not sure how to mark it
> in this tracker).
> 
>  - The "3" in the 4th part of the screenshots be a "2".

I suggest to file a new issue to request the Word-like or a similar layout for numbered lists (bulleted lists are complete now with this fix).

>  - The color of the line through the deleted 2 should indicate that it was
> deleted and thus should match the deleted color line.

The strike out line is the same yellow, but the subpixel rendered screen shot may show it differently.

> 
> Also, what happens to numbers after #3, the "Deleted this..." line?  Do they
> get renumbered appropriately?

As the example can show, there is no perfect solution for the layout, ie. there was no "2 Item", because that "Item" was only part of the original "2 emItem". We have to choose between the compact/readable/but incomplete and the detailed/less readable/complete/hard to implement (see references) layouts. 

For example, I don't like the detailed double numbering of Word (every list item gets two numbers), because it's less readable, but I can imagine, that it can helpful, especially during software migrations, so I like the idea, analyzing Word and other document editors [maybe the references get similar double numbering, too], choosing and implementing a better or optional change tracking layout for numbered lists in Writer, too. That could be a second step.

I think, this fix/issue has met the minimum requirement, visibility of changes in list items, and this is the first major step forward since 1998.
Comment 19 Timur 2019-11-15 17:15:22 UTC
I think we can mark this one Verified and reopen 3 bugs that were marked duplicates. 
Thanks László. I most value those fixes that are "inherited".
Comment 20 Timur 2019-11-15 17:20:29 UTC
This may go to Release Notes. 
Should other bugs be fixed, the better.